image overflow fix

--- a/src/scss/components/_image-group.scss
+++ b/src/scss/components/_image-group.scss
@@ -12,7 +12,7 @@
 
         #{$self}__image {
             opacity: 0.25;
-            width: 100vw;
+            width: 100%;
             height: inherit;
             object-fit: cover;
             object-position: top;
